tests/conformance/parse/invalid/hex_literal_no_digits.ks
// EXPECT: Expected expression
val x = 0x
